--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmOu48oQBmMBEcEnofwdPKiVGKvji0zD4"></script>-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmOu48oQBmMBEcEnofwdPKiVGKvji0zD4&libraries=places&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmOu48oQBmMBEcEnofwdPKiVGKvji0zD4"></script>
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmOu48oQBmMBEcEnofwdPKiVGKvji0zD4&libraries=places&callback=initMap" async defer></script>-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTO_y1BEXcTOsOZP5uCapXJ15R4Zmn7YE&libraries=places&callback=initMap" async defer></script>
 
     <script>
       
